Spacing, font weights and font size fixed

--- a/src/assets/css/website/_signin.scss
+++ b/src/assets/css/website/_signin.scss
@@ -25,6 +25,7 @@
   font-size: 1.25rem;
   margin-bottom: 32px;
   font-weight: $bolder;
+  line-height: 1.5625rem;
 }
 
 .guide-content li:before {
@@ -45,21 +46,27 @@
 
 .guide-content span.locked-icon {
   margin-right: 15px;
-  margin-top: 12px;
+ 
 }
 
 .guide-content span.shield-icon {
   margin-right: 15px;
-  margin-top: 12px;
+ 
 }
 
 .guide-content h4 {
   font-size: 1.25rem;
   margin-bottom: 23px;
+  font-weight: $bolder;
+  line-height: 1.5625rem;
+  color: $darkGray
 }
 
 .guide-bottom p {
   margin-bottom: 57px;
+  font-weight: $bold;
+  font-size: 1rem;
+  line-height: 1.25rem;
 }
 
 .guide-icon-wrap {
@@ -72,7 +79,9 @@
 
 .guide-content h1 {
   font-size: 2rem !important;
-  font-weight: 200;
+  font-weight: 300;
+  line-height: 2.5rem;
+  letter-spacing: 0.02em;
 }
 
 .guide-bottom {
@@ -193,6 +202,7 @@ span.forgot-pass {
 
 .credintials-content p > .loginPage-end-element {
   color: $darkGray;
+  line-height: 1.25rem;
 }
 
 //Footer Second
@@ -208,9 +218,15 @@ ul.footer-list {
 ul.footer-list li {
   display: inline-block;
   margin-right: 22px;
+  font-weight: $bold;
+  font-size: 0.9375rem;
+  line-height: 1.1875rem;
 }
 .copyright-text {
   color: $gray;
+  font-weight: $bold;
+  font-size: 0.9375rem;
+  line-height: 1.1875rem;
 }
 .guide-content {
   padding-left: 102px;
